--- a/ck_api_data/index.html
+++ b/ck_api_data/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>CardKingdom Prices</title>
         <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+        <link rel="stylesheet" type="text/css" href="css/loader.css">
     </head>
 <body>
     <h1>TO DO:</h1>
@@ -14,14 +15,16 @@
     </ul>
     <div id="buttonWrapper" class="buttonWrapper">
         <button id="getPrices" class="getPrices" onclick="jsonWorker()">Get Prices</button>
-        <button id-"filterCards " class="filterCards" onclick="filterWorker()">Filter Cards</button>
+        <button id-"filterCards" class="filterCards" onclick="filterWorker()">Filter Cards</button>
+        <button id-"clearFilters" class="clearFilters" onclick="clearFilers()">Clear Filters</button>
     </div>
     <br /><br />
     <div id="dataFilter" class="dataFilter">
-        <textarea id="cardNames" class="cardNames">Abomination</textarea>
+        <textarea id="cardNames" class="cardNames"></textarea>
     </div>
     <br />
     <div id="listDisplay" class="listDisplay"></div>
+    <div class="loader" id="loader"></div>
     <br style="clear:both" />
     <script src="js/genericFunctions.js" ></script>
     <script src="modules/displayModule.js" ></script>
