--- a/ck_api_data/index.html
+++ b/ck_api_data/index.html
@@ -7,10 +7,11 @@
 <body>
     <div id="buttonWrapper" class="buttonWrapper">
         <button id="getPrices" class="getPrices" onclick="jsonWorker()">Get Prices</button>
-        <button id-"filterCards" class="filterCards" onclick="filterWorker()">Filter Cards</button>
-        <button id-"clearFilters" class="clearFilters" onclick="clearFilers()">Clear Filters</button>
+        <button id="filterCards" class="filterCards" onclick="filterWorker()">Filter Cards</button>
+        <button id="clearFilters" class="clearFilters" onclick="clearFilers()">Clear Filters</button>
     </div>
-    <br /><br />
+    <div id="repriceTimestamp" class="repriceTimestamp">&nbsp;</div>
+    <br />
     <div id="dataFilter" class="dataFilter">
         <textarea id="cardNames" class="cardNames"></textarea>
     </div>
