--- a/edhrec-aggirgator/index.html
+++ b/edhrec-aggirgator/index.html
@@ -11,5 +11,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="js/general.js"></script>
 <script src="js/updates.js"></script>
-<script src="js/processTopCardJson.js"></script>
+<script src="js/fetchTopCardJson.js"></script>
+<script src="js/outpuTopCards.js"></script>
 </html>
