display and css added

--- a/edhrec-aggirgator/index.html
+++ b/edhrec-aggirgator/index.html
@@ -1,16 +1,18 @@
 <html>
 <head>
 <title>EDHRec Aggrigator</title>
+<link rel="stylesheet" href="css/table.css">
+<link rel="stylesheet" href="css/style.css">
 </head>
 
 <button id="getTopCards" onclick="getTopCards()">Get Top Cards</button>
-
 <div id="displayStatus"></div>
+<br id="clear"/>
 <div id="displayTopCards"></div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="js/general.js"></script>
 <script src="js/updates.js"></script>
 <script src="js/fetchTopCardJson.js"></script>
-<script src="js/outpuTopCards.js"></script>
+<script src="js/outputTopCards.js"></script>
 </html>
