--- a/edhrec-aggregator/index.html
+++ b/edhrec-aggregator/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>EDHRec Aggrigator</title>
+<title>EDHRec Aggregator</title>
 <link rel="stylesheet" href="css/table.css">
 <link rel="stylesheet" href="css/style.css">
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
