updated tnt pull to use promise based delay

--- a/trollandtoal_buylist_prices/index.html
+++ b/trollandtoal_buylist_prices/index.html
@@ -11,7 +11,7 @@
     <br /><br />
     <div id="dataDisplay" class="dataDisplay">
         <textarea id="cardNames" class="cardNames">Charizard</textarea>
-        <div id="errorDisplay" class="errorDisplay"></div>
+        <div id="statusDisplay" class="statusDisplay"></div>
     </div>
     <br style="clear:both" />
     <div id="linkDisplay" class="linkDisplay">
