--- a/the_mythic_store_bl_prices/index.html
+++ b/the_mythic_store_bl_prices/index.html
@@ -6,6 +6,7 @@
 <body>
 <div id="buttonWrapper" class="buttonWrapper">
     <button id="getPrices" class="getPrices" onclick="jsonWorker()">Get Prices</button>
+    <button id="clearData" class="clearData" onclick="clearData()">Clear Data</button>
 </div>
 <br /><br />
 <div id="dataFilter" class="dataFilter">
