updated readmes to be more reflective of the project requirements

--- a/scg_bl_prices/index.html
+++ b/scg_bl_prices/index.html
@@ -10,7 +10,7 @@
     </div>
     <br /><br />
     <div id="dataDisplay" class="dataDisplay">
-        <textarea id="cardNames" class="cardNames">Underworld Breach</textarea>
+        <textarea id="cardNames" class="cardNames"></textarea>
         <div id="linkDisplay" class="linkDisplay"></div>
     </div>
     <br style="clear:both" />
