edhrec aggregator update

--- a/edhrec-aggregator/index.html
+++ b/edhrec-aggregator/index.html
@@ -24,8 +24,8 @@
 <br />
 <div id="displayTopCards"></div>
 
-<script src="js/general.js"></script>
-<script src="js/updates.js"></script>
+<script src="js/genericFunctions.js"></script>
+<script src="js/topUrls.js"></script>
 <script src="js/fetchTopCardJson.js"></script>
 <script src="js/outputTopCards.js"></script>
 </html>
