cleaned up display

--- a/trollandtoal_buylist_prices/index.html
+++ b/trollandtoal_buylist_prices/index.html
@@ -10,16 +10,15 @@
     </div>
     <br /><br />
     <div id="dataDisplay" class="dataDisplay">
-        <textarea id="cardNames" class="cardNames">Charizard</textarea>
+        <textarea id="cardNames" class="cardNames"></textarea>
         <div id="statusDisplay" class="statusDisplay"></div>
     </div>
     <br style="clear:both" />
-    <div id="linkDisplay" class="linkDisplay">
-        <table id="productContainer"><thead><tr><th>Name</th><th>isFoil</th><th>Category</th><th>Condition</th><th>Buy Qty</th><th>Buy Price</th><th>Sell Qty</th><th>Hot Buy</th></tr></thead><tbody id="trollBuylist"></tbody></table>
-    </div>
+    <div id="listDisplay" class="listDisplay"></div>
 
     <script src="js/genericFunctions.js" ></script>
-    <script src="js/priceModule.js" ></script>
-    <script src="js/curlModule.js" ></script>
+    <script src="modules/priceModule.js" ></script>
+    <script src="modules/curlModule.js" ></script>
+    <script src="modules/displayModule.js" ></script>
 </body>
 </html>
