removed default text

--- a/abu_bl_prices/index.html
+++ b/abu_bl_prices/index.html
@@ -10,8 +10,7 @@
     </div>
     <br style="clear:both" /><br />
     <div id="dataDisplay" class="dataDisplay">
-        <textarea id="cardNames" class="cardNames">Smoldering Marsh
-Mox Diamond</textarea>
+        <textarea id="cardNames" class="cardNames"></textarea>
         <div id="messageDisplay" class="messageDisplay"></div>
     </div>
     <br style="clear:both" />
