--- a/ck_api_data/index.html
+++ b/ck_api_data/index.html
@@ -8,7 +8,7 @@
     <div id="buttonWrapper" class="buttonWrapper">
         <button id="getPrices" class="getPrices" onclick="jsonWorker()">Get Prices</button>
         <button id="filterCards" class="filterCards" onclick="filterWorker()">Filter Cards</button>
-        <button id="clearFilters" class="clearFilters" onclick="clearFilers()">Clear Filters</button>
+        <button id="clearFilters" class="clearFilters" onclick="clearDisplayData()">Clear Display Data</button>
     </div>
     <div id="repriceTimestamp" class="repriceTimestamp">&nbsp;</div>
     <br />
@@ -24,6 +24,6 @@
     <script src="modules/curlModule.js" ></script>
     <script src="modules/filterModule.js" ></script>
     <!-- Testing Only -->
-    <script src="testArr.js"></script>
+    <script src="json/testJson.js" ></script>
 </body>
 </html>
