--- a/sports_cards_link_creation/index.html
+++ b/sports_cards_link_creation/index.html
@@ -11,10 +11,7 @@
     <br /><br />
     <div class="productWrapper">
         <div id="dataFilter" class="dataFilter">
-            <textarea id="productNames" class="productNames">Topps 2022
-Leaf 2022
-Topps 2021
-Fleer 2022</textarea>
+            <textarea id="productNames" class="productNames"></textarea>
         </div>
     </div>
     <br style="clear:both" />
