--- a/scg_bl_prices/index.html
+++ b/scg_bl_prices/index.html
@@ -10,7 +10,7 @@
     </div>
     <br style="clear:both" /><br />
     <div id="dataDisplay" class="dataDisplay">
-        <textarea id="cardNames" class="cardNames"></textarea>
+        <textarea id="cardNames" class="cardNames">Lightning Bolt</textarea>
         <div id="messageDisplay" class="messageDisplay"></div>
     </div>
     <br style="clear:both" />
