initial updates and slug download

--- a/ck_api_data/index.html
+++ b/ck_api_data/index.html
@@ -13,7 +13,7 @@
     <div id="repriceTimestamp" class="repriceTimestamp">&nbsp;</div>
     <br />
     <div id="dataFilter" class="dataFilter">
-        <textarea id="cardNames" class="cardNames"></textarea>
+        <textarea id="cardNames" class="cardNames">Black Lotus</textarea>
     </div>
     <br />
     <div id="listDisplay" class="listDisplay"></div>
