--- a/ck_api_data/index.html
+++ b/ck_api_data/index.html
@@ -14,7 +14,7 @@
     <div id="repriceTimestamp" class="repriceTimestamp">&nbsp;</div>
     <br />
     <div id="dataFilter" class="dataFilter">
-        <textarea id="cardNames" class="cardNames"</textarea>
+        <textarea id="cardNames" class="cardNames"></textarea>
     </div>
     <br />
     <div id="listDisplay" class="listDisplay"></div>
