initial round of logic

--- a/ck_api_data/index.html
+++ b/ck_api_data/index.html
@@ -7,8 +7,8 @@
 <body>
     <div id="buttonWrapper" class="buttonWrapper">
         <button id="getPrices" class="getPrices" onclick="jsonWorker()">Get Prices</button>
-        <button id="filterCards" class="filterCards" onclick="filterWorker()">Filter Cards</button>
-        <button id="clearFilters" class="clearFilters" onclick="clearDisplayData()">Clear Display Data</button>
+        <button id="filterCards" class="filterCards" disabled onclick="filterWorker()">Filter Cards</button>
+        <button id="clearFilters" class="clearFilters" disabled onclick="clearDisplayData()">Clear Display Data</button>
         <input type="checkbox" class="showZeros" id="showZeros" checked/>Show Zeros
     </div>
     <div id="repriceTimestamp" class="repriceTimestamp">&nbsp;</div>
