new slug and flag added

--- a/ck_api_data/index.html
+++ b/ck_api_data/index.html
@@ -10,6 +10,7 @@
         <button id="filterCards" class="filterCards" disabled onclick="filterWorker()">Filter Cards</button>
         <button id="clearFilters" class="clearFilters" disabled onclick="clearDisplayData()">Clear Display Data</button>
         <input type="checkbox" class="showZeros" id="showZeros" checked/>Show Zeros
+        <input type="checkbox" class="backupSlug" id="backupSlug" checked/>Use Live Slug
     </div>
     <div id="repriceTimestamp" class="repriceTimestamp">&nbsp;</div>
     <br />
