--- a/ck_api_data/index.html
+++ b/ck_api_data/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="en">
     <head>
         <title>CardKingdom Prices</title>
         <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
@@ -6,16 +6,19 @@
     </head>
 <body>
     <div id="buttonWrapper" class="buttonWrapper">
-        <button id="getPrices" class="getPrices" onclick="jsonWorker()">Get Prices</button>
-        <button id="filterCards" class="filterCards" disabled onclick="filterWorker()">Filter Cards</button>
+        <button id="getPrices" class="getPrices" onclick="jsonGetWorker()">Get Prices</button>
+        <button id="filterCards" class="filterCards" disabled onclick="filterCardInputListWorker()">Filter Cards</button>
         <button id="clearFilters" class="clearFilters" disabled onclick="clearDisplayData()">Clear Display Data</button>
-        <input type="checkbox" class="showZeros" id="showZeros" checked/>Show Zeros
-        <input type="checkbox" class="backupSlug" id="backupSlug" checked/>Use Live Slug
+        <input type="checkbox" class="showZeros" id="showZeros" checked/><label for="showZeros">Show Zeros</label>
+        <input type="checkbox" class="whichSlug" id="whichSlug" /><label for="whichSlug">Use Live Slug</label>
     </div>
     <div id="repriceTimestamp" class="repriceTimestamp">&nbsp;</div>
     <br />
     <div id="dataFilter" class="dataFilter">
-        <textarea id="cardNames" class="cardNames"></textarea>
+        <label for="cardNames">Cards To Filter for:</label><br />
+        <textarea id="cardNames" class="cardNames">Sulfurous Springs
+Yavimaya Coast
+Dragon Whelp</textarea>
     </div>
     <br />
     <div id="listDisplay" class="listDisplay"></div>
@@ -25,6 +28,6 @@
     <script src="modules/displayModule.js" ></script>
     <script src="modules/curlModule.js" ></script>
     <script src="modules/filterModule.js" ></script>
-    <!-- Testing Only -->
+    <script src="modules/formatCKSlugData.js" ></script>
 </body>
 </html>
