reset index to live

--- a/ck_api_data/index.html
+++ b/ck_api_data/index.html
@@ -10,15 +10,13 @@
         <button id="filterCards" class="filterCards" disabled onclick="filterCardInputListWorker()">Filter Cards</button>
         <button id="clearFilters" class="clearFilters" disabled onclick="clearDisplayData()">Clear Display Data</button>
         <input type="checkbox" class="showZeros" id="showZeros" checked/><label for="showZeros">Show Zeros</label>
-        <input type="checkbox" class="whichSlug" id="whichSlug" /><label for="whichSlug">Use Live Slug</label>
+        <input type="checkbox" class="whichSlug" id="whichSlug" checked/><label for="whichSlug">Use Live Slug</label>
     </div>
     <div id="repriceTimestamp" class="repriceTimestamp">&nbsp;</div>
     <br />
     <div id="dataFilter" class="dataFilter">
         <label for="cardNames">Cards To Filter for:</label><br />
-        <textarea id="cardNames" class="cardNames">Sulfurous Springs
-Yavimaya Coast
-Dragon Whelp</textarea>
+        <textarea id="cardNames" class="cardNames"></textarea>
     </div>
     <br />
     <div id="listDisplay" class="listDisplay"></div>
