new url to pull data from

--- a/edhrec-aggregator/index.html
+++ b/edhrec-aggregator/index.html
@@ -19,6 +19,7 @@
     <input type="radio" class="recSelection" id="topLands" name="edhRecSelector" value="topLands"><label for="topLands">Top Lands</label>
 </div>
 <button id="getTopCards" onclick="getTopCards()">Get Top Cards</button>
+<button id="getPrices" class="getPrices" onclick="curlRequest()">Test curl</button>
 <div id="displayStatus"></div>
 <br id="clear"/>
 <br />
@@ -28,4 +29,5 @@
 <script src="js/topUrls.js"></script>
 <script src="js/fetchTopCardJson.js"></script>
 <script src="js/outputTopCards.js"></script>
+<script src="modules/curlModule.js"></script>
 </html>
