--- a/edhrec-aggregator/index.html
+++ b/edhrec-aggregator/index.html
@@ -6,38 +6,43 @@
     <link rel="stylesheet" type="text/css" href="css/loader.css">
 </head>
 <body>
-
-    <div id="topCardsSelectors">
-        <label for="topCardsByType">Choose a card type:</label>
-        <select name="topCardsByType" id="topCardsByType">
-            <option value="creatures">Creatures</option>
-            <option value="instants">Instants</option>
-            <option value="sorceries">Sorceries</option>
-            <option value="artifacts">Artifacts</option>
-            <option value="enchantments">Enchantments</option>
-            <option value="planeswalkers">Planeswalkers</option>
-            <option value="lands">Lands</option>
-        </select>
-        <button id="getTopCards" onclick="getTopCardsWorker()">Get Top Cards</button>
+    <div id="topCardsBlock">
+        <div id="topCardsSelectors">
+            <label for="topCardsByType">Choose a card type:</label>
+            <select name="topCardsByType" id="topCardsByType">
+                <option value="creatures">Creatures</option>
+                <option value="instants">Instants</option>
+                <option value="sorceries">Sorceries</option>
+                <option value="artifacts">Artifacts</option>
+                <option value="enchantments">Enchantments</option>
+                <option value="planeswalkers">Planeswalkers</option>
+                <option value="lands">Lands</option>
+            </select>
+            <button id="getTopCards" onclick="getTopCardsWorker()">Get Top Cards</button>
+        </div>
+        <div id="topCardsByColorSelectors">
+            <label for="topCardsByColor">Choose a color:</label>
+            <!-- (w, u, b, r, g, colorless, multi) -->
+            <select name="topCardsByColor" id="topCardsByColor">
+                <option value="w">White</option>
+                <option value="u">Blue</option>
+                <option value="b">Black</option>
+                <option value="r">Red</option>
+                <option value="g">Green</option>
+                <option value="colorless">Colorless</option>
+                <option value="multi">Multicolor</option>
+            </select>
+            <button id="getTopCardsByColor" onclick="getTopCardsByColorWorker()">Get Top Cards by Color</button>
+        </div>
     </div>
-    <br />
-    <div id="topCardsByColorSelectors">
-        <label for="topCardsByColor">Choose a color:</label>
-        <!-- (w, u, b, r, g, colorless, multi) -->
-        <select name="topCardsByColor" id="topCardsByColor">
-            <option value="w">White</option>
-            <option value="u">Blue</option>
-            <option value="b">Black</option>
-            <option value="r">Red</option>
-            <option value="g">Green</option>
-            <option value="colorless">Colorless</option>
-            <option value="multi">Multicolor</option>
-        </select>
-        <button id="getTopCardsByColor" onclick="getTopCardsByColorWorker()">Get Top Cards by Color</button>
+    <br id="clear"/>
+    <div id="topCardsByTimeBlock">
+        <div id="topCardsByMonthSelector"><button onclick="getTopCardsByMonthWorker()">Get Top Cards</button></div>
+        <div id="topCommanderByMonthSelector"><button onclick="getTopCommandersByMonthWorker()">Get Top Commanders</button></div>
     </div>
     <br id="clear"/>
     <div id="displayStatus"></div>
-    <br id="clear"/>
+    <br />
     <br />
     <div id="displayTopCards" class="displayTopCards"></div>
     <div class="loader" id="loader"></div>
@@ -46,6 +51,8 @@
 <script src="js/genericFunctions.js"></script>
 <script src="modules/curlModule.js"></script>
 <script src="modules/inputWorkersModule.js"></script>
+<script src="modules/displayModule.js"></script>
 <script src="modules/topCardsByTypeModule.js"></script>
 <script src="modules/topCardsByColorModule.js"></script>
+<script src="modules/topCardsByTime.js"></script>
 </html>
