refactored and working

--- a/edhrec-aggregator/index.html
+++ b/edhrec-aggregator/index.html
@@ -18,7 +18,7 @@
             <button id="getTopCardsByColor" onclick="getTopCardsByColorWorker()">Get Top Cards by Color</button>
         </div>
     </div>
-    <br id="clear"/>
+    <br class="clear"/>
     <div id="topCommandersByColorBlock">
         <div id="topCommandersByColorSelector">
             <label for="topCommandersByColor">Choose a Commaner color pairing:</label>
@@ -26,13 +26,13 @@
             <button id="getTopCommandersByColor" onclick="getTopCommandersByColorWorker()">Get Top Commanders by Color</button>
         </div>
     </div>
-    <br id="clear"/>
-    <br id="clear"/>
+    <br class="clear"/>
+    <br class="clear"/>
     <div id="topCardsByTimeBlock">
         <div id="topCardsByMonthSelector"><button onclick="getTopCardsByMonthWorker()">Get Top Cards</button></div>
         <div id="topCommanderByMonthSelector"><button onclick="getTopCommandersByMonthWorker()">Get Top Commanders</button></div>
     </div>
-    <br id="clear"/>
+    <br class="clear"/>
     <div id="displayStatus"></div>
     <br />
     <br />
