--- a/edhrec-aggregator/index.html
+++ b/edhrec-aggregator/index.html
@@ -29,7 +29,7 @@
     <div id="individualCardSearchBlock">
         <div id="individualCardSearchSelector">
             <label for="topCardSearch">Enter Card Name:</label>
-            <input name="topCardSearch" id="topCardSearch" value="Oko, Thief of Crowns"/>
+            <input name="topCardSearch" id="topCardSearch" />
             <button id="getTopCard" onclick="getTopCardWorker()">Get Card Data</button>
         </div>
     </div>
