--- a/edhrec-aggregator/index.html
+++ b/edhrec-aggregator/index.html
@@ -29,7 +29,7 @@
     <div id="individualCardSearchBlock">
         <div id="individualCardSearchSelector">
             <label for="topCardSearch">Enter Card Name:</label>
-            <input name="topCardSearch" id="topCardSearch" />
+            <input name="topCardSearch" id="topCardSearch" placeholder="Oko, Thief of Crowns" />
             <button id="getTopCard" onclick="getTopCardWorker()">Get Card Data</button>
         </div>
     </div>
@@ -43,7 +43,7 @@
     <div id="displayStatus"></div>
     <br />
     <br />
-    <div id="displayTopCards" class="displayTopCards"></div>
+    <div id="cardListDisplay" class="cardListDisplay"></div>
     <div class="loader" id="loader"></div>
 </body>
 
