found a way around CORS

--- a/moxfield-api/index.html
+++ b/moxfield-api/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<button onclick="startDataFetch()">Start this shit!</button>
+<button onclick="startDataFetch()">Pull PreDH Deck Lists</button>
 <br />
 <br />
 <div id="displayStatus"></div>
@@ -19,8 +19,5 @@
 <script src="js/genericFunctions.js"></script>
 <script src="modules/curlModule.js"></script>
 <script src="js/worker.js"></script>
-<!-- These are for testing -->
-<script src="test-data/card.js"></script>
-<script src="test-data/search.js"></script>
 </body>
 </html>
