--- a/moxfield-api/index.html
+++ b/moxfield-api/index.html
@@ -7,8 +7,11 @@
 </head>
 <body>
 
-<button onclick="startDataFetch()">Pull PreDH Deck Lists</button>
-<br />
+<div id="informationBlock">
+    <button id="dataPull" onclick="startDataFetch()">Pull PreDH Deck Lists</button>
+    <strong>This script will only work with the <a href="https://mybrowseraddon.com/access-control-allow-origin.html" target="_blank">Allow CORS: Access-Control-Allow-Origin</a> browser plugin.</strong>
+</div>
+<br class="clear"/>
 <br />
 <div id="displayStatus"></div>
 <br />
@@ -18,6 +21,7 @@
 
 <script src="js/genericFunctions.js"></script>
 <script src="modules/curlModule.js"></script>
+<script src="modules/objectWorkerModule.js"></script>
 <script src="js/worker.js"></script>
 </body>
 </html>
