added oathbreaker option

--- a/moxfield-api/index.html
+++ b/moxfield-api/index.html
@@ -8,7 +8,8 @@
 <body>
 
 <div id="informationBlock">
-    <button id="dataPull" onclick="startDataFetch()">Pull PreDH Deck Lists</button>
+    <button class="dataPull" onclick="startDataFetch('predh')">Pull preDH Deck Lists</button>
+    <button class="dataPull" onclick="startDataFetch('oathbreaker')">Pull Oathbreaker Deck Lists</button>
     <strong>This script will only work with the <a href="https://mybrowseraddon.com/access-control-allow-origin.html" target="_blank">Allow CORS: Access-Control-Allow-Origin</a> browser plugin.</strong>
 </div>
 <br class="clear"/>
