--- a/ck_api_data/index.html
+++ b/ck_api_data/index.html
@@ -9,8 +9,9 @@
         <button id="getPrices" class="getPrices" onclick="jsonGetWorker()">Get Prices</button>
         <button id="filterCards" class="filterCards" disabled onclick="filterCardInputListWorker()">Filter Cards</button>
         <button id="clearFilters" class="clearFilters" disabled onclick="setListDomInnerHTML('listDisplay')">Clear Display Data</button>
+        <button id="showPercentDiff" class="showPercentDiff" disabled onclick="showHighPercentCards()">Show High Percent Cards</button>
         <input type="checkbox" class="showZeros" id="showZeros" checked/><label for="showZeros">Show Zeros</label>
-        <input type="checkbox" class="whichSlug" id="whichSlug" checked/><label for="whichSlug">Use Live Slug</label>
+        <input type="checkbox" class="whichSlug" id="whichSlug" /><label for="whichSlug">Use Live Slug</label>
     </div>
     <div id="repriceTimestamp" class="repriceTimestamp">&nbsp;</div>
     <br />
@@ -27,5 +28,7 @@
     <script src="modules/curlModule.js" ></script>
     <script src="modules/filterModule.js" ></script>
     <script src="modules/formatCKSlugData.js" ></script>
+<!-- testing -->
+<script src="ck_slug/pricelist2.js"></script>
 </body>
 </html>
