--- a/ck_api_data/index.html
+++ b/ck_api_data/index.html
@@ -12,7 +12,7 @@
         <label for="buylistPercentDiff">Set Buylist Diff Percent:</label>
         <select name="buylistPercentDiff" id="buylistPercentDiff"></select>
         <input type="checkbox" class="showZeros" id="showZeros" checked/><label for="showZeros">Show Zeros</label>
-        <input type="checkbox" class="whichSlug" id="whichSlug" /><label for="whichSlug">Use Live Slug</label>
+        <input type="checkbox" class="whichSlug" id="whichSlug" checked/><label for="whichSlug">Use Live Slug</label>
     </div>
     <br />
     <button id="clearFilters" class="clearFilters" disabled onclick="setListDomInnerHTML('listDisplay')">Clear Display Data</button>
