--- a/ck_api_data/index.html
+++ b/ck_api_data/index.html
@@ -8,7 +8,7 @@
     <div id="buttonWrapper" class="buttonWrapper">
         <button id="getPrices" class="getPrices" onclick="jsonGetWorker()">Get Prices</button>
         <button id="filterCards" class="filterCards" disabled onclick="filterCardInputListWorker()">Filter Cards</button>
-        <button id="showPercentDiff" class="showPercentDiff" disabled onclick="showHighPercentCards()">Show High Percent Cards</button>
+        <button id="showPercentDiff" class="showPercentDiff" onclick="showHighPercentCards()">Show High Percent Cards</button>
         <label for="buylistPercentDiff">Set Buylist Diff Percent:</label>
         <select name="buylistPercentDiff" id="buylistPercentDiff"></select>
         <input type="checkbox" class="showZeros" id="showZeros" checked/><label for="showZeros">Show Zeros</label>
