--- a/ck_api_data/index.html
+++ b/ck_api_data/index.html
@@ -8,11 +8,15 @@
     <div id="buttonWrapper" class="buttonWrapper">
         <button id="getPrices" class="getPrices" onclick="jsonGetWorker()">Get Prices</button>
         <button id="filterCards" class="filterCards" disabled onclick="filterCardInputListWorker()">Filter Cards</button>
+        <input type="checkbox" class="showZeros" id="showZeros" checked/><label for="showZeros">Show Zeros</label>
+        <input type="checkbox" class="whichSlug" id="whichSlug" checked/><label for="whichSlug">Use Live Slug</label>
+    </div>
+    <br />
+    <div id="showPercentWrapped" class="showPercentWrapped">
         <button id="showPercentDiff" class="showPercentDiff" onclick="showHighPercentCards()">Show High Percent Cards</button>
         <label for="buylistPercentDiff">Set Buylist Diff Percent:</label>
         <select name="buylistPercentDiff" id="buylistPercentDiff"></select>
-        <input type="checkbox" class="showZeros" id="showZeros" checked/><label for="showZeros">Show Zeros</label>
-        <input type="checkbox" class="whichSlug" id="whichSlug" checked/><label for="whichSlug">Use Live Slug</label>
+        <input type="checkbox" class="showVariations" id="showVariations" checked/><label for="showVariations">Show Variations</label>
     </div>
     <br />
     <button id="clearFilters" class="clearFilters" disabled onclick="setListDomInnerHTML('listDisplay')">Clear Display Data</button>
