--- a/ck_api_data/index.html
+++ b/ck_api_data/index.html
@@ -38,5 +38,6 @@
     <script src="modules/cardFilterModule.js" ></script>
     <script src="modules/formatCKSlugData.js" ></script>
     <script src="modules/pricePercentFilter.js"></script>
+    <script src="modules/tableDisplayUpdates.js"></script>
 </body>
 </html>
