--- a/ck_api_data/index.html
+++ b/ck_api_data/index.html
@@ -15,7 +15,7 @@
     <div id="showPercentWrapped" class="showPercentWrapped">
         <button id="showPercentDiff" class="showPercentDiff" disabled onclick="showHighPercentCards()">Show High Percent Cards</button>
         <label for="buylistPercentDiff">Set Buylist Diff Percent:</label><select name="buylistPercentDiff" id="buylistPercentDiff"></select>
-        <label for="buylistPercentDiff">Sort Buylist Diff Percent:</label><select name="buylistPercentDiffSort" id="buylistPercentDiffSort"></select>
+        <label for="buylistPercentDiffSort">Sort Buylist Diff Percent By:</label><select name="buylistPercentDiffSort" id="buylistPercentDiffSort"></select>
         <input type="checkbox" class="showVariations" id="showVariations" title="Enabling this will add all variation types to the output."/><label for="showVariations" title="Enabling this will add all variation types to the output.">Add Variations</label>
         <input type="checkbox" class="showFoils" id="showFoils" title="Enabling this will add foils to the output."/><label for="showFoils" title="Enabling this will add foils to the output.">Add Foils</label>
     </div>
@@ -34,13 +34,14 @@
     <div class="loader" id="loader"></div>
     <br style="clear:both" />
     <script src="js/genericFunctions.js" ></script>
-    <script src="modules/createDropDownModule.js"></script>
+    <script src="js/pricePercentFilter.js"></script>
+    <script src="js/createDropDownMenus.js"></script>
+    <script src="modules/dataModifcationModule.js" ></script>
     <script src="modules/displayModule.js" ></script>
     <script src="modules/curlModule.js" ></script>
     <script src="modules/hostlistDisplayModule.js"></script>
     <script src="modules/cardFilterModule.js" ></script>
     <script src="modules/formatCKSlugData.js" ></script>
-    <script src="modules/pricePercentFilter.js"></script>
     <script src="modules/tableDisplayUpdates.js"></script>
 </body>
 </html>
