removed a layer of cpmplexity and sorted

--- a/ck_api_data/index.html
+++ b/ck_api_data/index.html
@@ -37,7 +37,7 @@
     <script src="js/pricePercentFilter.js"></script>
     <script src="js/createDropDownMenus.js"></script>
     <script src="modules/dataModifcationModule.js" ></script>
-    <script src="modules/displayModule.js" ></script>
+    <script src="modules/filteredCardsDisplayModule.js" ></script>
     <script src="modules/curlModule.js" ></script>
     <script src="modules/hostlistDisplayModule.js"></script>
     <script src="modules/cardFilterModule.js" ></script>
