--- a/ck_api_data/index.html
+++ b/ck_api_data/index.html
@@ -13,7 +13,7 @@
     </div>
     <br />
     <div id="showPercentWrapped" class="showPercentWrapped">
-        <button id="showPercentDiff" class="showPercentDiff" disabled onclick="showHighPercentCards()">Show High Percent Cards</button>
+        <button id="showPercentDiff" class="showPercentDiff" disabled onclick="showHighPercentCards('buylist')">Show High Percent Cards</button>
         <label for="buylistPercentDiff">Set Buylist Diff Percent:</label><select name="buylistPercentDiff" id="buylistPercentDiff"></select>
         <label for="buylistPercentDiffSort">Sort Buylist Diff Percent By:</label><select name="buylistPercentDiffSort" id="buylistPercentDiffSort"></select>
         <input type="checkbox" class="showVariations" id="showVariations" title="Enabling this will add all variation types to the output."/><label for="showVariations" title="Enabling this will add all variation types to the output.">Add Variations</label>
