--- a/ck_api_data/index.html
+++ b/ck_api_data/index.html
@@ -16,8 +16,11 @@
         <button id="showPercentDiff" class="showPercentDiff" disabled onclick="showHighPercentCards('buylist')">Show High Percent Cards</button>
         <label for="buylistPercentDiff">Set Buylist Diff Percent:</label><select name="buylistPercentDiff" id="buylistPercentDiff"></select>
         <label for="buylistPercentDiffSort">Sort Buylist Diff Percent By:</label><select name="buylistPercentDiffSort" id="buylistPercentDiffSort"></select>
+        <br />
         <input type="checkbox" class="showVariations" id="showVariations" title="Enabling this will add all variation types to the output."/><label for="showVariations" title="Enabling this will add all variation types to the output.">Add Variations</label>
         <input type="checkbox" class="showFoils" id="showFoils" title="Enabling this will add foils to the output."/><label for="showFoils" title="Enabling this will add foils to the output.">Add Foils</label>
+        <input type="checkbox" class="priceBanding" id="priceBanding" title="Enabling this will group prices into bands."/><label for="priceBanding" title="Enabling this will group prices into bands.">Band Prices</label>
+        <input type="checkbox" class="showOutOfStock" id="showOutOfStock" title="Enabling this will include only out of stock items in the output."/><label for="showOutOfStock" title="Enabling this will include only out of stock items in the output.">Show Only Out of Stock</label>
     </div>
     <br />
     <button id="displayHotlist" class="displayHotlist" onclick="jsonGetWorker(fetchHotlist)">Display Hotlist</button>
